style.css
body {
    font-family: 'Times New Roman', Times, serif;
    background-color: #A0FCD6;
}

.elcontainer {
    display: flex;
    flex: wrap;
    width: 1000px;
    height: 1000px;
    margin: 0 auto;
    border: solid 1px black;
}

.box {
    width: calc(100% / 10);
    height: calc(100% / 10);
    border: 1px solid black;
    display: flex;
    justify-content: center;
    align-items: center;
    color: black;
}

.active {
    background-color: red;
}

